[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Menu/ChoosePack/PackPreview.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/pack.png" type="Texture" id=2]

[node name="PackPreview" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 250 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewTexture" type="NinePatchRect" parent="."]
margin_right = 600.0
margin_bottom = 1200.0
texture = ExtResource( 2 )

[node name="PreviewArea" type="CenterContainer" parent="."]
margin_right = 600.0
margin_bottom = 1200.0

[node name="PackLabel" type="Label" parent="PreviewArea"]
margin_left = 292.0
margin_top = 571.0
margin_right = 307.0
margin_bottom = 628.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0
"

[connection signal="gui_input" from="PreviewArea" to="." method="_on_gui_input"]
